images, and start of website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"hello world"
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+		<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Fredericka+the+Great|Hind" rel="stylesheet">
+	</head>
+	<body>
+		<div class = "navbar">
+			<div class = "about nav_elem">About</div>
+			<div class = "map nav_elem">Map</div>
+			<div class = "travel nav_elem">Travel</div>
+			<div class = "experience nav_elem">Resume</div>
+		</div>
+		<div id = "intro">
+			<video id = "intro-vid" width="800" border = "5" autoplay>
+  			<source src="assets/videos/info.mp4" type="video/mp4">
+			</video>
+		</div>
+	</body>
+</html>
