fixed javascript for experience.html and added temporary background photo for index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Hind" rel="stylesheet">
 	</head>
 	<body id = "home-body">
+		<div id = "background-image"><img src="assets/img/b.jpg"></div>
 		<div id = "home-view">
 			<div id = "name">Elaine Chien</div>
 			<div id = "home-nav" class = "navbar">
