removed background pictures, changed shade of blue, added descriptions to experience, added shadow for terminal

--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
 			<div id = "profile-pic"><img id = "prof" src="assets/img/profile_pic.jpg">
 			</div>
 			<div id = "about-box"> About&ensp;Me
-				<div id = "about-text">Hi I'm Elaine and I'm a computer science major at UC Berkeley. This summer I will be interning at Qualcomm as a software engineering intern in the beautiful city of San Diego. <br> <br>
-				Aside from CS, I love archery (I'm on UC Berkeley's archery team), trying new restuarants (especially those that reflect the local culture), and traveling (check out some of my travel videos here). </div>
+				<div id = "about-text">Hi I'm Elaine and I'm a computer science major at UC Berkeley. This summer I will be interning at Qualcomm as a software engineer. <br> <br>
+				Aside from CS, I love archery (I'm on UC Berkeley's archery team), trying new restuarants (especially those that reflect the local culture), and traveling (check out some of my travel videos <a id = "travel-here" href = "travel.html">here</a>). </div>
 				<div id = "contact-box">Contact
 					<div id = "contact">
 						<div id="linkedin"><a href="https://www.linkedin.com/in/elaine-chien-35b738132/"><img  id= "linkedin-icon" src="assets/img/linkedin.png"></a></div>
