--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Hind" rel="stylesheet">
 	</head>
 	<body id = "home-body">
-		<div id = "background-image"><img src="assets/img/b.jpg"></div>
+		
 		<div id = "home-view">
 			<div id = "name">Elaine Chien</div>
 			<div id = "home-nav" class = "navbar">
@@ -15,8 +15,10 @@
 				<a href = "experience.html"><div class = "experience nav_elem">Resume</div></a>
 			</div>
 			<div id = "intro">
-				<video id = "intro-vid" width="800" border = "5" autoplay>
+				
+				<video id = "intro-vid" width="800" autoplay>
 	  			<source src="assets/videos/info.mp4" type="video/mp4">
+	  			<img src = "assets/img/intro-pic.png"  width="800">
 				</video>
 			</div>
 		</div>
